landing header footer main

--- a/website/src/app/features/landing-layout/components/footer/footer.component.html
+++ b/website/src/app/features/landing-layout/components/footer/footer.component.html
@@ -1,31 +1,63 @@
-<section class="count">
-    <div class="row ">
-        <div class="col-4">
-            <div class="card border-0">
-                <div class="card-body">
-                  <h4 class="card-title h4 programme-degree"><u>MA</u></h4>
-                  <p class="card-text font-weight-bold programme-title lead">International Relations</p>
-                  <p class="card-text programme-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+<div class="container-fluid">
+  <div class="row justify-content-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 rightside">
+          <h3 class="head">Services</h3>
+          <h5 class="subhead">Blood Donation Camp</h5>
+          <h5 class="subhead">Thalassemia Request</h5>
+          <h5 class="subhead">NRCTC Recoganise</h5>
         </div>
-        <div class="col-4">
-            <div class="card border-0">
-                <div class="card-body">
-                  <h4 class="card-title h4 programme-degree"><u>MA</u></h4>
-                  <p class="card-text font-weight-bold programme-title lead">International Relations</p>
-                  <p class="card-text programme-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+
+        <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
+          <h3 class="head">Contacts</h3>
+          <h5 class="subhead">Phone</h5>
+          <p class="midhead">
+            <i class="fa-solid fa-phone"></i> +91 1236547990 | +91 8888855421
+          </p>
+          <h5 class="subhead">E-mail</h5>
+          <p class="midhead">
+            <i class="fa-solid fa-envelope"></i>
+            bloodbank@gmail.com
+          </p>
         </div>
-        <div class="col-4">
-            <div class="card border-0">
-                <div class="card-body">
-                  <h4 class="card-title h4 programme-degree"><u>MA</u></h4>
-                  <p class="card-text font-weight-bold programme-title lead">International Relations</p>
-                  <p class="card-text programme-summary">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+
+        <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
+          <h3 class="head">Address</h3>
+          <p class="midhead">
+            <i class="fa-solid fa-location-dot fa-lg"></i> Meera bhavan, opp. Sony Center,<br />
+            Near Old Dande Hospital,<br />
+            Nagpur -440010.
+          </p>
         </div>
+
+        <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
+          <div style="overflow: hidden">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.170803763473!2d79.05370937401278!3d21.14559988375766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bd4c06816ae14cf%3A0x16bece4149d8d45e!2sS2P%20EDUTECH!5e0!3m2!1sen!2sin!4v1707816704924!5m2!1sen!2sin"></iframe>
+          </div>
+        </div>
+      </div>
     </div>
-</section> 
+
+    <div class="horizontal-line" style="width: 100%"></div>
+
+    <div class="row py-3">
+      <div class="col-12 bottom">
+        <h6>Connect with us</h6>
+        <a class="media-icon">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a class="media-icon">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a class="media-icon">
+          <i class="fa-brands fa-linkedin-in"></i>
+        </a>
+        <a class="media-icon">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
