--- a/website/src/app/features/landing-layout/components/header/header.component.scss
+++ b/website/src/app/features/landing-layout/components/header/header.component.scss
@@ -19,6 +19,7 @@ nav {
       text-decoration: none;
       font-weight: 700;
       text-align: center;
+      cursor: pointer;
       color: rgb(186, 35, 35);
       &:hover {
         color: rgb(165, 42, 42);
