--- a/website/src/app/features/landing-layout/landing-layout.component.html
+++ b/website/src/app/features/landing-layout/landing-layout.component.html
@@ -3,14 +3,15 @@
   <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <img class="img-fluid" src="../../../assets/landing.png" alt="" />
+            <img class="img-fluid" src="../../../assets/landing.png" alt="" class="landing-img w-100" />
 
         </div>
     </div>
   </div>
 </section>
-<section class="count">
-    <div class="container mx-5">
+
+
+    <!-- <div class="container mx-5">
         <div class="row ">
           <div class="col-4">
             <div class="card border-0">
@@ -55,5 +56,100 @@
             </div>
           </div>
         </div>
+    </div> -->
+
+<section class="count">
+    <div class="container-fluid">
+      <div class="row">
+
+        <div class="col-4">
+          <div class="card">
+            <div class="card-title">
+              150 +
+            </div>
+            <div class="card-body">
+              Blood unit collected
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="card">
+            <div class="card-title">
+              100 +
+            </div>
+            <div class="card-body">
+              Blood unit issued
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4">
+          <div class="card">
+            <div class="card-title">
+              35 +
+            </div>
+            <div class="card-body">
+              Camps Held
+            </div>
+          </div>
+        </div>
+
+
+      </div>
     </div>
 </section>
+
+<section class="about" id="about">
+<div class="container-fluid">
+  <div class="row">
+      <div class="col-8 text">
+        <div class="head text-center">About Us</div>
+        <div class="body-text">
+          Our member organizations operate more than 600 blood collection sites providing close to 60 percent of the U.S., and a quarter of the Canadian, blood supply. These blood centers serve more than 150 million people and provide blood products and services to more than 3,500 hospitals and healthcare facilities across North America. All ABC U.S. members are licensed and regulated by the U.S. Food and Drug Administration.Blood is essential for transporting oxygen, nutrients, and other substances to tissues throughout the body. Donated blood can be lifesaving for individuals who have lost blood because of accidents or surgery,
+        </div>
+      </div>
+      <div class="col-4" >
+        <img src="../../../assets/about img.jpg" class="img">
+      </div>
+  </div>
+</div>
+</section>
+
+
+<section class="gallery" id="gallery">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="text-center">
+        Gallery
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+      <div class="col-4 img">
+        <img src="../../../assets/gallery/1jpeg.jpeg" class="img-fluid w-100" alt="">
+      </div>
+    </div>
+  </div>
+</section>
+
+
+
+
+<app-footer></app-footer>
