--- a/website/src/app/features/landing-layout/landing-layout.component.scss
+++ b/website/src/app/features/landing-layout/landing-layout.component.scss
@@ -1,67 +1,149 @@
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .landing-img {
-    height: 100vh;
+  height: 100vh;
 }
 
+// .count {
+
+//     // width: 100vw;
+//     .card {
+//         margin-top: 5%;
+//         border-bottom: 2.5px solid #a7c4df !important;
+//         border-radius: 0;
+//         line-height: 1.3;
+//     }
+
+//     .card-body::after {
+//         height: 0;
+//         left: 0;
+//         bottom: 0;
+//         width: 100%;
+//         border-top: 2.5px solid #a7c4df !important;
+//         -webkit-transition: all 0.35s;
+//         -moz-transition: all 0.35s;
+//         -o-transition: all 0.35s;
+//         transition: all 0.35s;
+//     }
+
+//     .card-body::before,
+//     .card-body::after {
+//         background: rgba(#a7c4df, 0.5);
+//         content: "";
+//         position: absolute;
+//         z-index: -1;
+//     }
+
+//     .card:hover {
+//         color: #000;
+//     }
+
+//     .card:hover .card-body:after {
+//         height: 100%;
+//         color: #fff;
+//     }
+
+//     .card-body {
+//         position: relative;
+//         z-index: 0;
+//         -webkit-transition: all 0.35s ease;
+//         -moz-transition: all 0.35s ease;
+//         -o-transition: all 0.35s ease;
+//         transition: all 0.35s ease;
+//     }
+
+//     .card-img,
+//     .card-img-top {
+//         z-index: 1;
+//     }
+
+//     .card-text {
+//         margin-bottom: 1rem;
+//     }
+
+// }
+
 .count {
+  background-color: #f5ebeb;
+  .container-fluid {
+    justify-content: center;
+    padding: 0rem 6rem;
+    margin-bottom: -4rem; 
+   
 
-    // width: 100vw;
     .card {
-        margin-top: 5%;
-        border-bottom: 2.5px solid #a7c4df !important;
-        border-radius: 0;
-        line-height: 1.3;
-    }
+      margin-top: 2rem;
+      margin-left: 1rem;
+      margin-right: 1rem;
+      border: 2px solid green;
+      padding: 1rem;
+    //   background-color: #ffc107;
+      .card-title {
+        text-align: center;
+        font-family: Champion Gothic;
+        font-size: 50px;
+      }
+      .card-body {
+        text-align: center;
+        font-family: "poppins";
+        font-size: 18px;
+      }
+    }         
+  }
+}
 
-    .card-body::after {
-        height: 0;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        border-top: 2.5px solid #a7c4df !important;
-        -webkit-transition: all 0.35s;
-        -moz-transition: all 0.35s;
-        -o-transition: all 0.35s;
-        transition: all 0.35s;
-    }
 
-    .card-body::before,
-    .card-body::after {
-        background: rgba(#a7c4df, 0.5);
-        content: "";
-        position: absolute;
-        z-index: -1;
+.about {
+  // background-color: #b88e8e;
+  background-color: #ffffff;
+  .container-fluid {
+    background-color: #ecb3b9;
+    .row {
+      .text {
+        margin-top: 5rem;
+        .head {
+          font-family: Champion Gothic;
+          font-size: 50px;
+          color: #aa0806;
+        }
+        .body-text {
+          padding: 1rem 2rem;
+          text-align: justify;
+          // font-family: "poppins";
+          font-family: "Helvetica";
+          font-size: 18px;
+        }
+      }
+      .img {
+        margin-top: 5rem;
+        height: 20rem;
+        width: 30rem;
+        padding: 2rem 0rem;
+      }
     }
+  }
+}
 
-    .card:hover {
-        color: #000;
+.gallery{
+  background-color: #f5ebeb;
+  .container-fluid{
+    padding: 0rem 2rem;
+    .row{
+      .text-center{
+        
+        font-family: Champion Gothic;
+        font-size: 50px;
+        color: #aa0806;
+      }
     }
-
-    .card:hover .card-body:after {
-        height: 100%;
-        color: #fff;
+    .row{
+        .img-fluid{
+          height: 15rem;
+          padding: 20px;
+        }      
     }
-
-    .card-body {
-        position: relative;
-        z-index: 0;
-        -webkit-transition: all 0.35s ease;
-        -moz-transition: all 0.35s ease;
-        -o-transition: all 0.35s ease;
-        transition: all 0.35s ease;
-    }
-
-    .card-img,
-    .card-img-top {
-        z-index: 1;
-    }
-
-    .card-text {
-        margin-bottom: 1rem;
-    }
-
+  }
 }
