get API of blood request

--- a/App/src/app/layout/pages/tabs/admin-request/admin-request.page.html
+++ b/App/src/app/layout/pages/tabs/admin-request/admin-request.page.html
@@ -17,7 +17,7 @@
         </ion-segment-button>
         <!-- Define Role Below -->
         <ion-segment-button value="history">
-          <ion-label class="ion-text-capitalize">History</ion-label>
+          <ion-label class="ion-text-capitalize">Historyy</ion-label>
         </ion-segment-button>
       </ion-segment>
     </ion-item>
