--- a/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
+++ b/App/src/app/layout/pages/tabs/blood-requests/blood-requests.page.html
@@ -6,10 +6,14 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <div *ngIf="loader; else otherContent">
+    <app-skeleton></app-skeleton>
+  </div>
+  <ng-template #otherContent>
   <div [ngSwitch]="currentTitle">
     <ion-item class="mt-2" lines="none" *ngSwitchCase="'Request'">
       <ion-segment [(ngModel)]="activeSegment" [scrollable]="true">
-        <ion-segment-button value="list">
+        <ion-segment-button value="list" *ngIf="user.role == 'ADMIN'">
           <ion-label class="ion-text-capitalize">My List</ion-label>
         </ion-segment-button>
 
@@ -18,7 +22,7 @@
         </ion-segment-button>
         <!-- Define Role Below -->
         <ion-segment-button value="history">
-          <ion-label class="ion-text-capitalize">History</ion-label>
+          <ion-label class="ion-text-capitalize">History of admin</ion-label>
         </ion-segment-button>
       </ion-segment>
     </ion-item>
@@ -26,19 +30,21 @@
 
        <!-- Define Role -->
        <div *ngSwitchCase="'list'">
-        <ion-card (click)="openModel('list')">
+        <ng-container *ngIf="myListTabDetails.length > 0">
+        <ion-card  *ngFor="let i of myListTabDetails" (click)="openModel('list',i)">
           <ion-card-content class="ion-no-padding">
             <ion-grid>
               <ion-row>
                 <ion-col size="3" class="drop">
                   <img src="../../../../../assets/blood-unscreen.gif" alt="" />
-                  <ion-card-title>A+</ion-card-title>
+                  <ion-card-title>{{i?.bloodGroup}}</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
-                  <ion-label class="name">Ketki Pande</ion-label>
+                  <ion-label class="name">{{i?.name 
+                  }}</ion-label>
                   <div class="ion-margin-top">
                     <i class="fa-solid fa-location-dot"></i>
-                    <ion-label class="donar">Nagpur</ion-label>
+                    <ion-label class="donar">{{i?.city +', '+i?.state}}</ion-label>
                   </div>
                   <div class="ion-margin-top donar-container">
                     <div>
@@ -47,32 +53,34 @@
                     </div>
                     <div class="ion-padding-start">
                       <i class="fa-solid fa-person-half-dress"></i>
-                      <ion-label class="donar">Gender</ion-label>
+                      <ion-label class="donar">{{i?.gender}}</ion-label>
                     </div>
                   </div>
                 </ion-col>
                 <ion-col>
-                  <ion-label class="status">Pending</ion-label>
+                  <ion-label class="status">{{i?.status}}</ion-label>
                 </ion-col>
               </ion-row>
             </ion-grid>
           </ion-card-content>
         </ion-card>
+        </ng-container>
       </div>
-      <div *ngSwitchCase="'details'">
-        <ion-card (click)="openModel('details')">
+      <div *ngSwitchCase="'latest'">
+        <ng-container *ngIf="latestTabDetails.length > 0">
+        <ion-card *ngFor="let l of latestTabDetails" (click)="openModel('latest',l)">
           <ion-card-content class="ion-no-padding">
             <ion-grid>
               <ion-row>
                 <ion-col size="3" class="drop">
                   <img src="../../../../../assets/blood-unscreen.gif" alt="" />
-                  <ion-card-title>A+</ion-card-title>
+                  <ion-card-title>{{l?.bloodGroup}}</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
-                  <ion-label class="name">ANUSHKA</ion-label>
+                  <ion-label class="name">{{l?.name}}</ion-label>
                   <div class="ion-margin-top">
                     <i class="icons-img fa-solid fa-location-dot"></i>
-                    <ion-label class="donar">Nagpur</ion-label>
+                    <ion-label class="donar">{{l?.city +', '+l?.state}}</ion-label>
                   </div>
                   <div class="ion-margin-top donar-container">
                     <div>
@@ -81,19 +89,19 @@
                     </div>
                     <div class="ion-padding-start">
                       <i class="icons-img fa-solid fa-person-half-dress"></i>
-                      <ion-label class="donar">Gender</ion-label>
+                      <ion-label class="donar">{{l?.gender}}</ion-label>
                     </div>
                   </div>
                 </ion-col>
                 <ion-col>
-                  <ion-label class="status">Pending</ion-label>
+                  <ion-label class="status">{{l?.status}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row class="ion-justify-content-center">
-                <ion-col size="auto" class="admin">
-                  <ion-label class="status">FirstName MiddleName LastName</ion-label>
+                <ion-col size="auto" class="admin" *ngIf="!!user.acceptor">
+                  <ion-label class="status">{{user?.acceptor?.firstName}} {{user?.acceptor?.lastName}}</ion-label>
                 </ion-col>
-                <ion-col  class="ion-text-end">
+                <ion-col  class="ion-text-end" *ngIf="user.role == 'ADMIN' && !user.acceptor">
                   <ion-button>
                     Accept
                   </ion-button>
@@ -101,33 +109,25 @@
               </ion-row>
             </ion-grid>
           </ion-card-content>
-
-
-
-
-
-
-
-
-
-
-
         </ion-card>
+      </ng-container>
       </div>
       <div *ngSwitchCase="'history'">
-        <ion-card (click)="openModel('history')">
+        <ng-container *ngIf="historyTabDetails.length > 0">
+        <ion-card  *ngFor="let h of historyTabDetails" (click)="openModel('history',h)">
           <ion-card-content class="ion-no-padding">
             <ion-grid>
               <ion-row>
                 <ion-col size="3" class="drop">
                   <img src="../../../../../assets/blood-unscreen.gif" alt="" />
-                  <ion-card-title>A+</ion-card-title>
+                  <ion-card-title>{{h?.bloodGroup}}</ion-card-title>
                 </ion-col>
                 <ion-col size="6">
-                  <ion-label class="name">ANUSHKA KALBANDE</ion-label>
+                  <ion-label class="name">{{h?.name 
+                  }}</ion-label>
                   <div class="ion-margin-top">
                     <i class="icons-img fa-solid fa-location-dot"></i>
-                    <ion-label class="donar">Nagpur</ion-label>
+                    <ion-label class="donar">{{h?.city +', '+h?.state}}</ion-label>
                   </div>
                   <div class="ion-margin-top donar-container">
                     <div>
@@ -136,7 +136,7 @@
                     </div>
                     <div class="ion-padding-start">
                       <i class="icons-img fa-solid fa-person-half-dress"></i>
-                      <ion-label class="donar">Gender</ion-label>
+                      <ion-label class="donar">{{h?.gender}}</ion-label>
                     </div>
                   </div>
                 </ion-col>
@@ -149,8 +149,13 @@
             </ion-grid>
           </ion-card-content>
         </ion-card>
+      </ng-container>
       </div>
      
     </div>
   </div>
+  <ion-infinite-scroll (ionInfinite)="doInfinite($event)">
+    <ion-infinite-scroll-content></ion-infinite-scroll-content>
+  </ion-infinite-scroll>
+</ng-template>
 </ion-content>
