--- a/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
+++ b/App/src/app/shared/models/bloodrequest-mylist/bloodrequest-mylist.component.html
@@ -5,7 +5,7 @@
       defaultHref=""
       (click)="dismiss()"
     ></ion-back-button>
-    <ion-title> My List</ion-title>
+    <ion-title> active attender </ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
@@ -14,109 +14,89 @@
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
         <ion-label class="ion-padding-horizontal"
-          >Blood Request Details</ion-label
+          >Personal Details</ion-label
         >
       </ion-item>
       <div class="ion-padding accordion-collapsed" slot="content">
         <ion-card>
           <ion-card-content>
-            <ion-grid>
+            <ion-grid >
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Name</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data.name}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Age</ion-label>
-                  <ion-label>: 0</ion-label>
+                  <ion-label>:  {{data.age}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Gender</ion-label>
-                  <ion-label>: MALE</ion-label>
+                  <ion-label>: {{data.gender}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Group</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data.bloodGroup}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Require Date</ion-label>
-                  <ion-label>: 23 March 2024, 9:26 AM</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Father or Husband</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
-                  <ion-label>: 0</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
-                  <ion-label>: string</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
-                  <ion-label>: 0</ion-label>
+                  <ion-label>: {{data.bloodRequireDate}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">State</ion-label>
-                  <ion-label>: string</ion-label>
+                  <ion-label>: {{data.state}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">City</ion-label>
+                  <ion-label>: {{data.city}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Father or Husband</ion-label>
+                  <ion-label>: {{data.fatherOrHusband}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Hemoglobin</ion-label>
+                  <ion-label>: {{data.hemoglobin}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Illness</ion-label>
+                  <ion-label>: {{data.illness}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Location</ion-label>
+                  <ion-label>: {{data.location}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col size="12">
+                  <ion-label class="head">Mobile Number</ion-label>
+                  <ion-label>: {{data.mobileNo}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Units</ion-label>
-                  <ion-label>: 0</ion-label>
-                </ion-col>
-              </ion-row>
-
-              <ion-row>
-                <ion-col size="auto">
-                  <ion-item fill="outline" lines="none">
-                    <ion-select
-                      aria-label="Fruit"
-                      interface="popover"
-                      placeholder="Select Mode"
-                      formControlName="bloodGroup"
-                    >
-                      <ion-select-option value="bloodbank"
-                        >Blood Bank
-                      </ion-select-option>
-                      <ion-select-option value="donor"
-                        >Donor
-                      </ion-select-option>
-                    </ion-select>
-                  </ion-item>
+                  <ion-label>: {{data.units}}</ion-label>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -124,10 +104,10 @@
         </ion-card>
       </div>
     </ion-accordion>
-    <ion-accordion value="second">
+    <ion-accordion value="second" *ngIf="!data.donor">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-building-columns"></i>
-        <ion-label class="ion-padding-horizontal">Blood Bank</ion-label>
+        <ion-label class="ion-padding-horizontal">Blood Bank </ion-label>
       </ion-item>
       <div class="ion-padding" slot="content">
         <ion-card>
@@ -136,19 +116,24 @@
               <ion-row>
                 <ion-col size="12">
                   <ion-label class="head">Blood Bank Name </ion-label>
-                  <ion-label> : ABC BANK</ion-label>
+                  <ion-label> : {{data?.bloodBankName}}</ion-label>
                 </ion-col>
               </ion-row>
               <ion-row>
                 <ion-col size="12">
-                  <ion-label class="head">Location </ion-label>
-                  <ion-label> : ABC BANK , nagpur</ion-label>
+                  <ion-label class="head">State </ion-label>
+                  <ion-label> :  {{data?.bankState}}</ion-label>
                 </ion-col>
               </ion-row>
-           
               <ion-row>
-                <ion-col class="ion-text-center">
-                  <ion-button>Submit</ion-button>
+                <ion-col size="12">
+                  <ion-label class="head">City </ion-label>
+                  <ion-label> :  {{data?.bankCity}}</ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col class="ion-text-center" *ngIf="data.status != 'DONE' && data.status != 'RECEIVED'">
+                  <ion-button (click)="receive()">Received</ion-button>
                 </ion-col>
               </ion-row>
             </ion-grid>
@@ -156,7 +141,7 @@
         </ion-card>
       </div>
     </ion-accordion>
-    <ion-accordion value="third">
+    <ion-accordion value="third" *ngIf="!!data.donor">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-droplet"></i>
         <ion-label class="ion-padding-horizontal">Blood Donar</ion-label>
