changes in place

--- a/App/src/app/layout/pages/donate/donate.page.html
+++ b/App/src/app/layout/pages/donate/donate.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
-    <ion-back-button slot="start" default-href="/layout/home"></ion-back-button>
+    <ion-back-button slot="start" (click)="navigate()" default-href=""></ion-back-button>
     <ion-title class="ion-justify-content-center">Donate</ion-title>
   </ion-toolbar>
 </ion-header>
