--- a/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
+++ b/App/src/app/shared/models/admin-request-mylist/admin-request-mylist.component.html
@@ -391,94 +391,79 @@
                 <ion-button>Submit</ion-button>
               </ion-col>
             </ion-row> -->
-            <ion-grid>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Name</ion-label>
-                  <ion-label>: {{data.name}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Age</ion-label>
-                  <ion-label>:  {{data.age}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Gender</ion-label>
-                  <ion-label>: {{data.gender}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Blood Group</ion-label>
-                  <ion-label>: {{data.bloodGroup}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Blood Require Date</ion-label>
-                  <ion-label>: {{data.bloodRequireDate}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">State</ion-label>
-                  <ion-label>: {{data.state}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">City</ion-label>
-                  <ion-label>: {{data.city}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Father or Husband</ion-label>
-                  <ion-label>: {{data.fatherOrHusband}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Hemoglobin</ion-label>
-                  <ion-label>: {{data.hemoglobin}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Illness</ion-label>
-                  <ion-label>: {{data.illness}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Location</ion-label>
-                  <ion-label>: {{data.location}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Mobile Number</ion-label>
-                  <ion-label>: {{data.mobileNo}}</ion-label>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Units</ion-label>
-                  <ion-label>: {{data.units}}</ion-label>
-                </ion-col>
-              </ion-row>
-  
-              <ion-row>
-                <ion-col size="12">
-                  <ion-label class="head">Units</ion-label>
-                  <ion-label>: </ion-label>
-                </ion-col>
-              </ion-row>
-              
-            </ion-grid>
+            <ng-container *ngIf="!!donor">
+              <ion-grid>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Name</ion-label>
+                    <ion-label>: {{donor?.name}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Age</ion-label>
+                    <ion-label>:  {{donor?.age}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Gender</ion-label>
+                    <ion-label>: {{donor?.gender}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Blood Group</ion-label>
+                    <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Donation Date</ion-label>
+                    <ion-label>: {{donor?.donationDate}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">State</ion-label>
+                    <ion-label>: {{donor?.state}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">City</ion-label>
+                    <ion-label>: {{donor?.city}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row *ngIf="donor.gender == 'FEMALE'">
+                  <ion-col size="12">
+                    <ion-label class="head">Father/Husband</ion-label>
+                    <ion-label>: {{donor.fatherOrHusband}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Hemoglobin</ion-label>
+                    <ion-label>: {{donor?.hemoglobin}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Illness</ion-label>
+                    <ion-label>: {{donor?.illness}}</ion-label>
+                  </ion-col>
+                </ion-row>
+                <ion-row>
+                  <ion-col size="12">
+                    <ion-label class="head">Mobile Number</ion-label>
+                    <ion-label>: {{donor?.mobileNo}}</ion-label>
+                  </ion-col>
+                </ion-row>
+    
+                
+              </ion-grid>
+            </ng-container>
+        
           </ion-card-content>
         </ion-card>
       </div>
