--- a/admin_panel/src/app/layout/advertise/form/form.component.html
+++ b/admin_panel/src/app/layout/advertise/form/form.component.html
@@ -3,7 +3,7 @@
     <div class="card-header">
       <div class="row justify-content-between align-items-center">
         <div class="col-auto">
-          <h3 class="mb-0">Admin Form</h3>
+          <h3 class="mb-0">Advertise Form</h3>
         </div>
         <div class="col-auto">
           <button type="button" class="btn btn-danger" (click)="goBack()">
