--- a/admin_panel/src/app/layout/advertise/list/list.component.html
+++ b/admin_panel/src/app/layout/advertise/list/list.component.html
@@ -51,6 +51,7 @@
               <th>Sr.No</th>
               <th>Name</th>
               <th>URL</th>
+              <th>Created At</th>
               <th>Action</th>
 
             </tr>
@@ -59,8 +60,8 @@
             <tr *ngFor="let u of tableData; let i = index">
               <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
               <td>{{ u.name }}</td>
-
               <td>{{ u.url }}</td>
+              <td>{{u.createdAt}}</td>
               <td>
 
                 <button
