--- a/admin_panel/src/app/layout/attender/form/form.component.html
+++ b/admin_panel/src/app/layout/attender/form/form.component.html
@@ -1,1 +1,95 @@
-<p>form works!</p>
+<div class="container-fluid animated fadeIn">
+    <div class="card">
+      <div class="card-header">
+        <div class="row justify-content-between align-items-center">
+          <div class="col-auto">
+            <h3 class="mb-0">Attender Form</h3>
+          </div>
+          <div class="col-auto">
+            <button type="button" class="btn btn-danger" (click)="goBack()">
+              <i class="fa fa-arrow-left me-1" aria-hidden="true"></i>
+              Back
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="card-body">
+        <form [formGroup]="userForm" class="form-horizontal">
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                    First Name
+                </label>
+                <input type="text" class="form-control" formControlName="firstName">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                    Last Name
+                </label>
+                <input type="text" class="form-control" formControlName="lastName">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                    Email
+                </label>
+                <input type="text" class="form-control" formControlName="Email">
+              </div>
+            </div>
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                    Role
+                </label>
+                <input type="text" class="form-control" formControlName="role">
+              </div>
+            </div>
+          </div>  
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                  Mobile No
+                </label>
+                <input type="text" class="form-control" formControlName="mobileNo">
+              </div>
+            </div>
+              <div class="col-6">
+                <div class="mb-3">
+                  <label for="" class="form-label">
+                      State
+                  </label>
+                  <input type="text" class="form-control" formControlName="state">
+                </div>
+              </div>
+            </div> 
+          <!-- <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                    State
+                </label>
+                <input type="text" class="form-control" formControlName="state">
+              </div>
+            </div>
+          </div>  -->
+          <div class="row">
+            <div class="col-6">
+              <div class="mb-3">
+                <label for="" class="form-label">
+                  city
+                </label>
+                <input type="text" class="form-control" formControlName="city">
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
