--- a/admin_panel/src/app/layout/attender/list/list.component.html
+++ b/admin_panel/src/app/layout/attender/list/list.component.html
@@ -57,32 +57,26 @@
             <tr>
               <th>Sr.No</th>
               <th>Name</th>
-              <!-- <th>Email</th> -->
               <th>Mobile No.</th>
-              <th>Role</th>
-              <!-- <th
-                
-                >
-                  Action
-                </th> -->
+              <th>Created At</th>
+              <th>Action</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let u of users; let i = index">
               <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
               <td>{{ u.firstName + ", " + u.lastName }}</td>
-
               <td>{{ u.mobileNo }}</td>
-              <td>{{ u.role }}</td>
-              <!-- <td>
+              <td>{{ u.createdAt }}</td>
+              <td>
                   <button
                     (click)="navigateTo('/attender/form', u.id)"
                     class="btn btn-sm btn-outline-success me-1"
-                    ngbTooltip="Edit User"
+                    ngbTooltip="View User"
                   >
-                    <i class="fa fa-pencil me-1"></i> Edit
+                    <i class="fa fa-eye"></i>
                   </button>
-                  <button
+                  <!-- <button
                     class="btn btn-sm btn-outline-danger"
                     data-toggle="modal"
                     [disabled]="u.role == 'SUPER_ADMIN'"
@@ -90,8 +84,8 @@
                     ngbTooltip="Delete User"
                   >
                     <i class="fa fa-trash me-1"></i> delete
-                  </button>
-                </td> -->
+                  </button> -->
+                </td>
             </tr>
           </tbody>
         </table>
