--- a/admin_panel/src/app/layout/users/user-list/user-list.component.html
+++ b/admin_panel/src/app/layout/users/user-list/user-list.component.html
@@ -60,6 +60,7 @@
               <!-- <th>Email</th> -->
               <th>Mobile No.</th>
               <th>Role</th>
+              <th>Created At</th>
               <th
                 *ngIf="
                   userDetails.role == 'SUPER_ADMIN' ||
@@ -75,9 +76,9 @@
             <tr *ngFor="let u of users; let i = index">
               <td>{{ pageSize * (page - 1) + (i + 1) }}</td>
               <td>{{ u.firstName }}</td>
-
               <td>{{ u.mobileNo }}</td>
               <td>{{ u.role }}</td>
+              <td>{{ u.createdAt }}</td>
               <!-- <td
                 *ngIf="
                   userDetails.role == 'SUPER_ADMIN' ||
