--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -68,7 +68,7 @@
         <ion-row class="ion-align-items-center ion-justify-content-center">
           <ion-col size="12">
             <ion-item fill="outline" class="input">
-              <ion-label position="floating" lablePlacement="stacked"
+              <ion-label  *ngIf="!f['bloodRequireDate'].value" position="floating" lablePlacement="stacked"
                 >Blood Require Date</ion-label
               >
               <p class="ion-margin-end">
