accordian on condition history in admin and close button

--- a/App/src/app/layout/pages/request/request.page.html
+++ b/App/src/app/layout/pages/request/request.page.html
@@ -80,7 +80,7 @@
                 name="calendar-outline"
                 datetime="datetime"
                 class="ion-margin-top"
-                (click)="openCalender(f['bloodRequireDate'].value)"
+                (click)="openCalender('bloodRequireDate')"
               ></ion-icon>
             </ion-item>
           </ion-col>
