--- a/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
+++ b/App/src/app/layout/pages/admin/mylist-details/request-mylist-detail/request-mylist-detail.page.html
@@ -2,15 +2,18 @@
   <ion-toolbar color="primary">
     <ion-back-button
       slot="start"
-      default-href="/layout/blood-requests"
-      (click)="dismiss()"
+      default-href=""
+      (click)="back()"
     ></ion-back-button>
     <ion-title> My List</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-accordion-group value="first" class="ion-padding">
-    <ion-accordion value="first">
+  <!-- <ion-accordion-group value="first" class="ion-padding"> -->
+  <ion-accordion-group
+  [value]="providedBy ? (providedBy == 'DONOR' ? 'third' : 'second') : 'first'"
+  >
+    <ion-accordion value="first" *ngIf="!providedBy">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
         <ion-label class="ion-padding-horizontal"
@@ -121,11 +124,6 @@
                       </ion-select>
                     </ion-item>
                   </ion-col>
-                  <!-- <ion-col>
-                  <ion-item class="ion-no-padding ion-no-margin" lines="none">
-                    <ion-icon  slot="end" color="primary"  name="create-outline" ></ion-icon>
-                  </ion-item>
-                </ion-col> -->
                 </ion-row>
               </ion-grid>
             </ion-card-content>
@@ -133,7 +131,6 @@
         </div>
       </ng-container>
     </ion-accordion>
-
     <ion-accordion value="second" *ngIf="providedBy == 'BLOOD_BANK'">
       <ion-item slot="header" color="light">
         <i class="fa-solid fa-file-lines"></i>
@@ -209,7 +206,6 @@
                       [hasConfirmButton]="true"
                       [hasInfiniteScroll]="true"
                     >
-                  
                     </ionic-selectable>
                   </ion-item>
                 </ion-col>
@@ -234,7 +230,6 @@
                       [hasInfiniteScroll]="true"
                       (onChange)="setCity($event)"
                     >
-                   
                     </ionic-selectable>
                   </ion-item>
                 </ion-col>
@@ -296,128 +291,129 @@
       <div class="ion-padding" slot="content">
         <ion-card>
           <ion-card-content>
-            <ng-container *ngIf="donorEdit" >
-            <ion-row class="ion-align-items-center ion-justify-content-center">
-              <ion-col size="8">
-                <ion-item fill="outline" lines="none" label="Select Option">
-                  <ion-label class="box-text" position="stacked"
-                    >Select Option</ion-label
-                  >
-                  <ionic-selectable
-                    class="ion-text-capilatize"
-                    [items]="donorData"
-                    [(ngModel)]="selectTable.donor"
-                    [ngModelOptions]="{standalone: true}"
-                    itemTextField="name"
-                    itemValueField="id"
-                    [canSearch]="true"
-                    (onChange)="selectDonor($event)"
-                    [hasConfirmButton]="true"
-                    [hasInfiniteScroll]="true"
-                  >
-               
-                  </ionic-selectable>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="ion-text-center" *ngIf="!data.donor">
-                <ion-button (click)="allocate()">Allocate</ion-button>
-              </ion-col>
-              <ion-col class="ion-text-center" *ngIf="!!data.donor">
-                <ion-button (click)="allocate()">Re-Allocate</ion-button>
-              </ion-col>
-            </ion-row>
+            <ng-container *ngIf="donorEdit">
+              <ion-row
+                class="ion-align-items-center ion-justify-content-center"
+              >
+                <ion-col size="8">
+                  <ion-item fill="outline" lines="none" label="Select Option">
+                    <ion-label class="box-text" position="stacked"
+                      >Select Option</ion-label
+                    >
+                    <ionic-selectable
+                      class="ion-text-capilatize"
+                      [items]="donorData"
+                      [(ngModel)]="selectTable.donor"
+                      [ngModelOptions]="{standalone: true}"
+                      itemTextField="name"
+                      itemValueField="id"
+                      [canSearch]="true"
+                      (onChange)="selectDonor($event)"
+                      [hasConfirmButton]="true"
+                      [hasInfiniteScroll]="true"
+                    >
+                    </ionic-selectable>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col class="ion-text-center" *ngIf="!data.donor">
+                  <ion-button (click)="allocate()">Allocate</ion-button>
+                </ion-col>
+                <ion-col class="ion-text-center" *ngIf="!!data.donor">
+                  <ion-button (click)="allocate()">Re-Allocate</ion-button>
+                </ion-col>
+              </ion-row>
 
-            <ion-row>
-              <ion-col class="ion-text-center">
-                <ion-label>
-                  Create New Donar
-                </ion-label>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-              <ion-col class="ion-text-center">
-                <ion-button (click)="navigate()">New Donar</ion-button>
-              </ion-col>
-            </ion-row>
-       
-            <!-- <ion-row>
+              <ion-row>
+                <ion-col class="ion-text-center">
+                  <ion-label>
+                    Create New Donar
+                  </ion-label>
+                </ion-col>
+              </ion-row>
+              <ion-row>
+                <ion-col class="ion-text-center">
+                  <ion-button (click)="navigate()">New Donar</ion-button>
+                </ion-col>
+              </ion-row>
+
+              <!-- <ion-row>
               <ion-col class="ion-text-center">
                 <ion-button>Submit</ion-button>
               </ion-col>
             </ion-row> -->
-            <ng-container *ngIf="!!donor">
-              <ion-grid>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Name</ion-label>
-                    <ion-label>: {{donor?.name}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Age</ion-label>
-                    <ion-label>: {{donor?.age}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Gender</ion-label>
-                    <ion-label>: {{donor?.gender}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Blood Group</ion-label>
-                    <ion-label>: {{donor?.bloodGroup}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Donation Date</ion-label>
-                    <ion-label>: {{donor?.donationDate}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">State</ion-label>
-                    <ion-label>: {{donor?.state}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">City</ion-label>
-                    <ion-label>: {{donor?.city}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row *ngIf="donor.gender == 'FEMALE'">
-                  <ion-col size="12">
-                    <ion-label class="head">Father/Husband</ion-label>
-                    <ion-label>: {{donor.fatherOrHusband}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Hemoglobin</ion-label>
-                    <ion-label>: {{donor?.hemoglobin}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Illness</ion-label>
-                    <ion-label>: {{donor?.illness}}</ion-label>
-                  </ion-col>
-                </ion-row>
-                <ion-row>
-                  <ion-col size="12">
-                    <ion-label class="head">Mobile Number</ion-label>
-                    <ion-label>: {{donor?.mobileNo}}</ion-label>
-                  </ion-col>
-                </ion-row>
-              </ion-grid>
+              <ng-container *ngIf="!!donor">
+                <ion-grid>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Name</ion-label>
+                      <ion-label>: {{donor?.name}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Age</ion-label>
+                      <ion-label>: {{donor?.age}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Gender</ion-label>
+                      <ion-label>: {{donor?.gender}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Blood Group</ion-label>
+                      <ion-label>: {{donor?.bloodGroup}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Donation Date</ion-label>
+                      <ion-label>: {{donor?.donationDate}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">State</ion-label>
+                      <ion-label>: {{donor?.state}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">City</ion-label>
+                      <ion-label>: {{donor?.city}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row *ngIf="donor.gender == 'FEMALE'">
+                    <ion-col size="12">
+                      <ion-label class="head">Father/Husband</ion-label>
+                      <ion-label>: {{donor.fatherOrHusband}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Hemoglobin</ion-label>
+                      <ion-label>: {{donor?.hemoglobin}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Illness</ion-label>
+                      <ion-label>: {{donor?.illness}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12">
+                      <ion-label class="head">Mobile Number</ion-label>
+                      <ion-label>: {{donor?.mobileNo}}</ion-label>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ng-container>
             </ng-container>
-          </ng-container>
             <ng-container *ngIf="!!donor && !donorEdit">
               <ion-item class="ion-no-padding ion-no-margin" lines="none">
                 <ion-icon
