--- a/website/src/app/features/landing-layout/components/header/header.component.scss
+++ b/website/src/app/features/landing-layout/components/header/header.component.scss
@@ -1,6 +1,6 @@
 nav {
-    // background: rgba(230, 47, 47, 0.45);
-    background: rgba(255, 255, 255, 0.65);
+    background-color: rgba(250, 231, 231, 0.65);
+    // background-color: #f5ebeb;
     height: 70px;
     .navbar-brand {
       width: 150px;
