--- a/website/src/app/features/landing-layout/components/footer/footer.component.html
+++ b/website/src/app/features/landing-layout/components/footer/footer.component.html
@@ -3,10 +3,12 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3 rightside">
-          <h3 class="head">Services</h3>
-          <h5 class="subhead">Blood Donation Camp</h5>
-          <h5 class="subhead">Thalassemia Request</h5>
-          <h5 class="subhead">NRCTC Recoganise</h5>
+          <h3 class="head">Terms</h3>
+          <!-- <h5 class="subhead">Blood Donation Camp</h5> -->
+          <!-- <h5 class="subhead">Thalassemia Request</h5> -->
+          <!-- <h5 class="subhead">NRCTC Recoganise</h5> -->
+          <h5 class="texthead" routerLink="/terms" (click)="scrollToTop('terms')">Terms & Conditions</h5>
+          <h5 class="texthead" routerLink="/privacy" (click)="scrollToTop('privacy')">Privacy Policy</h5>
         </div>
 
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
@@ -29,6 +31,7 @@
             Near Old Dande Hospital,<br />
             Nagpur -440010.
           </p>
+          
         </div>
 
         <div class="col-sm-12 col-md-3 col-lg-3 col-xl-3">
