--- a/website/src/app/features/landing-layout/components/footer/footer.component.scss
+++ b/website/src/app/features/landing-layout/components/footer/footer.component.scss
@@ -1,7 +1,6 @@
 // Footer
 .container-fluid {
   color: #ccc;
-//   background-color: #002b51;
   background-color: #010101;
   .container {
     padding: 20px;
@@ -14,6 +13,12 @@
       padding-bottom: 10px;
       font-family: Helvetica;
       font-size: 18px;
+    }
+    .texthead{
+      padding-bottom: 10px;
+      font-family: Helvetica;
+      font-size: 18px;
+      cursor: pointer;
     }
     .midhead {
       padding-bottom: 10px;
