--- a/website/src/app/features/landing-layout/components/header/header.component.html
+++ b/website/src/app/features/landing-layout/components/header/header.component.html
@@ -20,26 +20,23 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" (click)="routeTo('about')" (click)="toggleCollapse()"
+            <a class="nav-link" routerLink="/home" (click)="routeTo('about')" (click)="toggleCollapse()"
               >About</a
             >
-          </li>
-  
-         
+          </li>         
           <li class="nav-item">
-            <a class="nav-link" (click)="routeTo('gallery')" (click)="toggleCollapse()"
+            <a class="nav-link" routerLink="/home" (click)="routeTo('gallery')" (click)="toggleCollapse()"
               >Gallery</a
             >
           </li>
-         
           <li class="nav-item">
-            <a class="nav-link"  (click)="navigateTo('/terms')" (click)="toggleCollapse()" 
-              >Terms & Conditions</a
+            <a class="nav-link"  routerLink="/donate" (click)="toggleCollapse()" 
+              >Donate Blood</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" (click)="navigateTo('/privacy')" (click)="toggleCollapse()"
-              >Privacy</a
+            <a class="nav-link" routerLink="/request" (click)="toggleCollapse()"
+              >Request Blood</a
             >
           </li>
           <li class="nav-item">
