--- a/website/src/styles.scss
+++ b/website/src/styles.scss
@@ -9,7 +9,7 @@
 
 @font-face {
     font-family: 'Helvetica';
-    src: url('../src/assets/fontSs/Helvetica-Bold.woff2') format('woff2');
+    src: url('../src/assets/fontSs/Helvetica.woff');
     font-weight: normal;
     font-style: normal;
 }
